SUBDIRS = lib/nanomsg src

install-data-hook:
	@echo bin dir $(bindir)
	@echo "============================================================="
	@echo "|            NanoChat was successfully installed "
	@echo "-------------------------------------------------------------"
	@echo "| NanoChat was installed in $(bindir) directory. "
	@echo "| Just type 'nanochat --help' there to get started."
	@echo "============================================================="
